refactor: rename command types to request/input
