# backend/src/modules/auth/schemas/login.ts
@@ -2,6 +2,6 @@ import { z } from "zod";
 
 export const loginSchema = z
   .object({ email: z.string().email(), password: z.string().min(1) })
-  .meta({ id: "LoginCommand" });
+  .meta({ id: "LoginRequest" });
 
 export type LoginBody = z.infer<typeof loginSchema>;
